ProjectPart4++/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    comment
    obracket
    usub
    uadd
    ocurly
    rparen
    string
    lparen
    ccurly
    cbracket

Grammar

Rule 0     S' -> module
Rule 1     module -> stmt
Rule 2     stmt -> statement_list
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement_list statement
Rule 5     statement -> newline statement
Rule 6     statement -> statement newline
Rule 7     statement -> print expression
Rule 8     expression -> input oparen parameters cparen
Rule 9     parameters -> expression
Rule 10    parameters -> parameters comma expression
Rule 11    parameters -> <empty>
Rule 12    statement -> assname equals expression
Rule 13    statement -> expression
Rule 14    statement -> ifstmt
Rule 15    statement -> whilestmt
Rule 16    statement -> name incassign expression
Rule 17    statement -> name decassign expression
Rule 18    statement -> name divassign expression
Rule 19    statement -> name mulassign expression
Rule 20    statement -> name modassign expression
Rule 21    statement -> name lshiftassign expression
Rule 22    statement -> name rshiftassign expression
Rule 23    statement -> name andassign expression
Rule 24    statement -> name orassign expression
Rule 25    statement -> name xorassign expression
Rule 26    statement -> name powerassign expression
Rule 27    statement -> name floorassign expression
Rule 28    expression -> boolean
Rule 29    expression -> minus expression
Rule 30    expression -> plus expression
Rule 31    expression -> invert expression
Rule 32    expression -> expression0
Rule 33    expression -> oparen expression cparen
Rule 34    expression -> not expression
Rule 35    expression -> name
Rule 36    expression -> expression plus expression
Rule 37    expression -> expression minus expression
Rule 38    expression -> expression times expression
Rule 39    expression -> expression div expression
Rule 40    expression -> expression power expression
Rule 41    expression -> expression modulo expression
Rule 42    expression -> expression lshift expression
Rule 43    expression -> expression rshift expression
Rule 44    expression -> expression floordiv expression
Rule 45    expression -> expression and expression
Rule 46    expression -> expression or expression
Rule 47    expression -> expression xor expression
Rule 48    expression -> expression strand expression
Rule 49    expression -> expression stror expression
Rule 50    expression -> expression lt expression
Rule 51    expression -> expression gt expression
Rule 52    expression -> expression lequal expression
Rule 53    expression -> expression gequal expression
Rule 54    expression -> expression isnotequal expression
Rule 55    expression -> expression isequal expression
Rule 56    ifstmt -> if expression colon newline indent statement_list dedent
Rule 57    ifstmt -> if expression colon newline indent statement_list dedent elsestmt
Rule 58    elsestmt -> else colon newline indent statement_list dedent
Rule 59    elsestmt -> elif expression colon newline indent statement_list dedent
Rule 60    elsestmt -> elif expression colon newline indent statement_list dedent elsestmt
Rule 61    whilestmt -> while expression colon newline indent statement_list dedent
Rule 62    expression0 -> num
Rule 63    expression0 -> name
Rule 64    expression0 -> boolean
Rule 65    num -> integer
Rule 66    assname -> identifier
Rule 67    name -> identifier
Rule 68    boolean -> true
Rule 69    boolean -> false

Terminals, with rules where they appear

and                  : 45
andassign            : 23
cbracket             : 
ccurly               : 
colon                : 56 57 58 59 60 61
comma                : 10
comment              : 
cparen               : 8 33
decassign            : 17
dedent               : 56 57 58 59 60 61
div                  : 39
divassign            : 18
elif                 : 59 60
else                 : 58
equals               : 12
error                : 
false                : 69
floorassign          : 27
floordiv             : 44
gequal               : 53
gt                   : 51
identifier           : 66 67
if                   : 56 57
incassign            : 16
indent               : 56 57 58 59 60 61
input                : 8
integer              : 65
invert               : 31
isequal              : 55
isnotequal           : 54
lequal               : 52
lparen               : 
lshift               : 42
lshiftassign         : 21
lt                   : 50
minus                : 29 37
modassign            : 20
modulo               : 41
mulassign            : 19
newline              : 5 6 56 57 58 59 60 61
not                  : 34
obracket             : 
ocurly               : 
oparen               : 8 33
or                   : 46
orassign             : 24
plus                 : 30 36
power                : 40
powerassign          : 26
print                : 7
rparen               : 
rshift               : 43
rshiftassign         : 22
strand               : 48
string               : 
stror                : 49
times                : 38
true                 : 68
uadd                 : 
usub                 : 
while                : 61
xor                  : 47
xorassign            : 25

Nonterminals, with rules where they appear

assname              : 12
boolean              : 28 64
elsestmt             : 57 60
expression           : 7 9 10 12 13 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 33 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 59 60 61
expression0          : 32
ifstmt               : 14
module               : 0
name                 : 16 17 18 19 20 21 22 23 24 25 26 27 35 63
num                  : 62
parameters           : 8 10
statement            : 3 4 5 6
statement_list       : 2 4 56 57 58 59 60 61
stmt                 : 1
whilestmt            : 15

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . stmt
    (2) stmt -> . statement_list
    (3) statement_list -> . statement
    (4) statement_list -> . statement_list statement
    (5) statement -> . newline statement
    (6) statement -> . statement newline
    (7) statement -> . print expression
    (12) statement -> . assname equals expression
    (13) statement -> . expression
    (14) statement -> . ifstmt
    (15) statement -> . whilestmt
    (16) statement -> . name incassign expression
    (17) statement -> . name decassign expression
    (18) statement -> . name divassign expression
    (19) statement -> . name mulassign expression
    (20) statement -> . name modassign expression
    (21) statement -> . name lshiftassign expression
    (22) statement -> . name rshiftassign expression
    (23) statement -> . name andassign expression
    (24) statement -> . name orassign expression
    (25) statement -> . name xorassign expression
    (26) statement -> . name powerassign expression
    (27) statement -> . name floorassign expression
    (66) assname -> . identifier
    (8) expression -> . input oparen parameters cparen
    (28) expression -> . boolean
    (29) expression -> . minus expression
    (30) expression -> . plus expression
    (31) expression -> . invert expression
    (32) expression -> . expression0
    (33) expression -> . oparen expression cparen
    (34) expression -> . not expression
    (35) expression -> . name
    (36) expression -> . expression plus expression
    (37) expression -> . expression minus expression
    (38) expression -> . expression times expression
    (39) expression -> . expression div expression
    (40) expression -> . expression power expression
    (41) expression -> . expression modulo expression
    (42) expression -> . expression lshift expression
    (43) expression -> . expression rshift expression
    (44) expression -> . expression floordiv expression
    (45) expression -> . expression and expression
    (46) expression -> . expression or expression
    (47) expression -> . expression xor expression
    (48) expression -> . expression strand expression
    (49) expression -> . expression stror expression
    (50) expression -> . expression lt expression
    (51) expression -> . expression gt expression
    (52) expression -> . expression lequal expression
    (53) expression -> . expression gequal expression
    (54) expression -> . expression isnotequal expression
    (55) expression -> . expression isequal expression
    (56) ifstmt -> . if expression colon newline indent statement_list dedent
    (57) ifstmt -> . if expression colon newline indent statement_list dedent elsestmt
    (61) whilestmt -> . while expression colon newline indent statement_list dedent
    (67) name -> . identifier
    (68) boolean -> . true
    (69) boolean -> . false
    (62) expression0 -> . num
    (63) expression0 -> . name
    (64) expression0 -> . boolean
    (65) num -> . integer

    newline         shift and go to state 14
    print           shift and go to state 11
    identifier      shift and go to state 24
    input           shift and go to state 12
    minus           shift and go to state 26
    plus            shift and go to state 22
    invert          shift and go to state 8
    oparen          shift and go to state 10
    not             shift and go to state 17
    if              shift and go to state 6
    while           shift and go to state 21
    true            shift and go to state 19
    false           shift and go to state 4
    integer         shift and go to state 13

    num                            shift and go to state 7
    name                           shift and go to state 20
    stmt                           shift and go to state 15
    whilestmt                      shift and go to state 2
    assname                        shift and go to state 16
    boolean                        shift and go to state 3
    module                         shift and go to state 1
    statement                      shift and go to state 9
    statement_list                 shift and go to state 23
    expression0                    shift and go to state 18
    expression                     shift and go to state 25
    ifstmt                         shift and go to state 5

state 1

    (0) S' -> module .



state 2

    (15) statement -> whilestmt .

    newline         reduce using rule 15 (statement -> whilestmt .)
    dedent          reduce using rule 15 (statement -> whilestmt .)
    print           reduce using rule 15 (statement -> whilestmt .)
    identifier      reduce using rule 15 (statement -> whilestmt .)
    input           reduce using rule 15 (statement -> whilestmt .)
    minus           reduce using rule 15 (statement -> whilestmt .)
    plus            reduce using rule 15 (statement -> whilestmt .)
    invert          reduce using rule 15 (statement -> whilestmt .)
    oparen          reduce using rule 15 (statement -> whilestmt .)
    not             reduce using rule 15 (statement -> whilestmt .)
    if              reduce using rule 15 (statement -> whilestmt .)
    while           reduce using rule 15 (statement -> whilestmt .)
    true            reduce using rule 15 (statement -> whilestmt .)
    false           reduce using rule 15 (statement -> whilestmt .)
    integer         reduce using rule 15 (statement -> whilestmt .)
    $end            reduce using rule 15 (statement -> whilestmt .)


state 3

    (28) expression -> boolean .
    (64) expression0 -> boolean .

  ! reduce/reduce conflict for plus resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for minus resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for times resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for div resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for power resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for modulo resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for lshift resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for rshift resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for floordiv resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for and resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for or resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for xor resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for strand resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for stror resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for lt resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for gt resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for lequal resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for gequal resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for isnotequal resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for isequal resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for newline resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for print resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for identifier resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for input resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for invert resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for oparen resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for not resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for if resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for while resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for true resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for false resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for integer resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for $end resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for dedent resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for colon resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for cparen resolved using rule 28 (expression -> boolean .)
  ! reduce/reduce conflict for comma resolved using rule 28 (expression -> boolean .)
    plus            reduce using rule 28 (expression -> boolean .)
    minus           reduce using rule 28 (expression -> boolean .)
    times           reduce using rule 28 (expression -> boolean .)
    div             reduce using rule 28 (expression -> boolean .)
    power           reduce using rule 28 (expression -> boolean .)
    modulo          reduce using rule 28 (expression -> boolean .)
    lshift          reduce using rule 28 (expression -> boolean .)
    rshift          reduce using rule 28 (expression -> boolean .)
    floordiv        reduce using rule 28 (expression -> boolean .)
    and             reduce using rule 28 (expression -> boolean .)
    or              reduce using rule 28 (expression -> boolean .)
    xor             reduce using rule 28 (expression -> boolean .)
    strand          reduce using rule 28 (expression -> boolean .)
    stror           reduce using rule 28 (expression -> boolean .)
    lt              reduce using rule 28 (expression -> boolean .)
    gt              reduce using rule 28 (expression -> boolean .)
    lequal          reduce using rule 28 (expression -> boolean .)
    gequal          reduce using rule 28 (expression -> boolean .)
    isnotequal      reduce using rule 28 (expression -> boolean .)
    isequal         reduce using rule 28 (expression -> boolean .)
    newline         reduce using rule 28 (expression -> boolean .)
    print           reduce using rule 28 (expression -> boolean .)
    identifier      reduce using rule 28 (expression -> boolean .)
    input           reduce using rule 28 (expression -> boolean .)
    invert          reduce using rule 28 (expression -> boolean .)
    oparen          reduce using rule 28 (expression -> boolean .)
    not             reduce using rule 28 (expression -> boolean .)
    if              reduce using rule 28 (expression -> boolean .)
    while           reduce using rule 28 (expression -> boolean .)
    true            reduce using rule 28 (expression -> boolean .)
    false           reduce using rule 28 (expression -> boolean .)
    integer         reduce using rule 28 (expression -> boolean .)
    $end            reduce using rule 28 (expression -> boolean .)
    colon           reduce using rule 28 (expression -> boolean .)
    cparen          reduce using rule 28 (expression -> boolean .)
    dedent          reduce using rule 28 (expression -> boolean .)
    comma           reduce using rule 28 (expression -> boolean .)

  ! plus            [ reduce using rule 64 (expression0 -> boolean .) ]
  ! minus           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! times           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! div             [ reduce using rule 64 (expression0 -> boolean .) ]
  ! power           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! modulo          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! lshift          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! rshift          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! floordiv        [ reduce using rule 64 (expression0 -> boolean .) ]
  ! and             [ reduce using rule 64 (expression0 -> boolean .) ]
  ! or              [ reduce using rule 64 (expression0 -> boolean .) ]
  ! xor             [ reduce using rule 64 (expression0 -> boolean .) ]
  ! strand          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! stror           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! lt              [ reduce using rule 64 (expression0 -> boolean .) ]
  ! gt              [ reduce using rule 64 (expression0 -> boolean .) ]
  ! lequal          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! gequal          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! isnotequal      [ reduce using rule 64 (expression0 -> boolean .) ]
  ! isequal         [ reduce using rule 64 (expression0 -> boolean .) ]
  ! newline         [ reduce using rule 64 (expression0 -> boolean .) ]
  ! print           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! identifier      [ reduce using rule 64 (expression0 -> boolean .) ]
  ! input           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! invert          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! oparen          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! not             [ reduce using rule 64 (expression0 -> boolean .) ]
  ! if              [ reduce using rule 64 (expression0 -> boolean .) ]
  ! while           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! true            [ reduce using rule 64 (expression0 -> boolean .) ]
  ! false           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! integer         [ reduce using rule 64 (expression0 -> boolean .) ]
  ! $end            [ reduce using rule 64 (expression0 -> boolean .) ]
  ! dedent          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! colon           [ reduce using rule 64 (expression0 -> boolean .) ]
  ! cparen          [ reduce using rule 64 (expression0 -> boolean .) ]
  ! comma           [ reduce using rule 64 (expression0 -> boolean .) ]


state 4

    (69) boolean -> false .

    plus            reduce using rule 69 (boolean -> false .)
    minus           reduce using rule 69 (boolean -> false .)
    times           reduce using rule 69 (boolean -> false .)
    div             reduce using rule 69 (boolean -> false .)
    power           reduce using rule 69 (boolean -> false .)
    modulo          reduce using rule 69 (boolean -> false .)
    lshift          reduce using rule 69 (boolean -> false .)
    rshift          reduce using rule 69 (boolean -> false .)
    floordiv        reduce using rule 69 (boolean -> false .)
    and             reduce using rule 69 (boolean -> false .)
    or              reduce using rule 69 (boolean -> false .)
    xor             reduce using rule 69 (boolean -> false .)
    strand          reduce using rule 69 (boolean -> false .)
    stror           reduce using rule 69 (boolean -> false .)
    lt              reduce using rule 69 (boolean -> false .)
    gt              reduce using rule 69 (boolean -> false .)
    lequal          reduce using rule 69 (boolean -> false .)
    gequal          reduce using rule 69 (boolean -> false .)
    isnotequal      reduce using rule 69 (boolean -> false .)
    isequal         reduce using rule 69 (boolean -> false .)
    newline         reduce using rule 69 (boolean -> false .)
    print           reduce using rule 69 (boolean -> false .)
    identifier      reduce using rule 69 (boolean -> false .)
    input           reduce using rule 69 (boolean -> false .)
    invert          reduce using rule 69 (boolean -> false .)
    oparen          reduce using rule 69 (boolean -> false .)
    not             reduce using rule 69 (boolean -> false .)
    if              reduce using rule 69 (boolean -> false .)
    while           reduce using rule 69 (boolean -> false .)
    true            reduce using rule 69 (boolean -> false .)
    false           reduce using rule 69 (boolean -> false .)
    integer         reduce using rule 69 (boolean -> false .)
    $end            reduce using rule 69 (boolean -> false .)
    dedent          reduce using rule 69 (boolean -> false .)
    colon           reduce using rule 69 (boolean -> false .)
    cparen          reduce using rule 69 (boolean -> false .)
    comma           reduce using rule 69 (boolean -> false .)


state 5

    (14) statement -> ifstmt .

    newline         reduce using rule 14 (statement -> ifstmt .)
    dedent          reduce using rule 14 (statement -> ifstmt .)
    print           reduce using rule 14 (statement -> ifstmt .)
    identifier      reduce using rule 14 (statement -> ifstmt .)
    input           reduce using rule 14 (statement -> ifstmt .)
    minus           reduce using rule 14 (statement -> ifstmt .)
    plus            reduce using rule 14 (statement -> ifstmt .)
    invert          reduce using rule 14 (statement -> ifstmt .)
    oparen          reduce using rule 14 (statement -> ifstmt .)
    not             reduce using rule 14 (statement -> ifstmt .)
    if              reduce using rule 14 (statement -> ifstmt .)
    while           reduce using rule 14 (statement -> ifstmt .)
    true            reduce using rule 14 (statement -> ifstmt .)
    false           reduce using rule 14 (statement -> ifstmt .)
    integer         reduce using rule 14 (statement -> ifstmt .)
    $end            reduce using rule 14 (statement -> ifstmt .)


state 6

    (56) ifstmt -> if . expression colon newline indent statement_list dedent
    (57) ifstmt -> if . expression colon newline indent statement_list dedent elsestmt
    (8) expression -> . input oparen parameters cparen
    (28) expression -> . boolean
    (29) expression -> . minus expression
    (30) expression -> . plus expression
    (31) expression -> . invert expression
    (32) expression -> . expression0
    (33) expression -> . oparen expression cparen
    (34) expression -> . not expression
    (35) expression -> . name
    (36) expression -> . expression plus expression
    (37) expression -> . expression minus expression
    (38) expression -> . expression times expression
    (39) expression -> . expression div expression
    (40) expression -> . expression power expression
    (41) expression -> . expression modulo expression
    (42) expression -> . expression lshift expression
    (43) expression -> . expression rshift expression
    (44) expression -> . expression floordiv expression
    (45) expression -> . expression and expression
    (46) expression -> . expression or expression
    (47) expression -> . expression xor expression
    (48) expression -> . expression strand expression
    (49) expression -> . expression stror expression
    (50) expression -> . expression lt expression
    (51) expression -> . expression gt expression
    (52) expression -> . expression lequal expression
    (53) expression -> . expression gequal expression
    (54) expression -> . expression isnotequal expression
    (55) expression -> . expression isequal expression
    (68) boolean -> . true
    (69) boolean -> . false
    (62) expression0 -> . num
    (63) expression0 -> . name
    (64) expression0 -> . boolean
    (67) name -> . identifier
    (65) num -> . integer

    input           shift and go to state 12
    minus           shift and go to state 26
    plus            shift and go to state 22
    invert          shift and go to state 8
    oparen          shift and go to state 10
    not             shift and go to state 17
    true            shift and go to state 19
    false           shift and go to state 4
    identifier      shift and go to state 28
    integer         shift and go to state 13

    num                            shift and go to state 7
    name                           shift and go to state 27
    boolean                        shift and go to state 3
    expression0                    shift and go to state 18
    expression                     shift and go to state 29

state 7

    (62) expression0 -> num .

    plus            reduce using rule 62 (expression0 -> num .)
    minus           reduce using rule 62 (expression0 -> num .)
    times           reduce using rule 62 (expression0 -> num .)
    div             reduce using rule 62 (expression0 -> num .)
    power           reduce using rule 62 (expression0 -> num .)
    modulo          reduce using rule 62 (expression0 -> num .)
    lshift          reduce using rule 62 (expression0 -> num .)
    rshift          reduce using rule 62 (expression0 -> num .)
    floordiv        reduce using rule 62 (expression0 -> num .)
    and             reduce using rule 62 (expression0 -> num .)
    or              reduce using rule 62 (expression0 -> num .)
    xor             reduce using rule 62 (expression0 -> num .)
    strand          reduce using rule 62 (expression0 -> num .)
    stror           reduce using rule 62 (expression0 -> num .)
    lt              reduce using rule 62 (expression0 -> num .)
    gt              reduce using rule 62 (expression0 -> num .)
    lequal          reduce using rule 62 (expression0 -> num .)
    gequal          reduce using rule 62 (expression0 -> num .)
    isnotequal      reduce using rule 62 (expression0 -> num .)
    isequal         reduce using rule 62 (expression0 -> num .)
    newline         reduce using rule 62 (expression0 -> num .)
    print           reduce using rule 62 (expression0 -> num .)
    identifier      reduce using rule 62 (expression0 -> num .)
    input           reduce using rule 62 (expression0 -> num .)
    invert          reduce using rule 62 (expression0 -> num .)
    oparen          reduce using rule 62 (expression0 -> num .)
    not             reduce using rule 62 (expression0 -> num .)
    if              reduce using rule 62 (expression0 -> num .)
    while           reduce using rule 62 (expression0 -> num .)
    true            reduce using rule 62 (expression0 -> num .)
    false           reduce using rule 62 (expression0 -> num .)
    integer         reduce using rule 62 (expression0 -> num .)
    $end            reduce using rule 62 (expression0 -> num .)
    dedent          reduce using rule 62 (expression0 -> num .)
    colon           reduce using rule 62 (expression0 -> num .)
    cparen          reduce using rule 62 (expression0 -> num .)
    comma           reduce using rule 62 (expression0 -> num .)


state 8

    (31) expression -> invert . expression
    (8) expression -> . input oparen parameters cparen
    (28) expression -> . boolean
    (29) expression -> . minus expression
    (30) expression -> . plus expression
    (31) expression -> . invert expression
    (32) expression -> . expression0
    (33) expression -> . oparen expression cparen
    (34) expression -> . not expression
    (35) expression -> . name
    (36) expression -> . expression plus expression
    (37) expression -> . expression minus expression
    (38) expression -> . expression times expression
    (39) expression -> . expression div expression
    (40) expression -> . expression power expression
    (41) expression -> . expression modulo expression
    (42) expression -> . expression lshift expression
    (43) expression -> . expression rshift expression
    (44) expression -> . expression floordiv expression
    (45) expression -> . expression and expression
    (46) expression -> . expression or expression
    (47) expression -> . expression xor expression
    (48) expression -> . expression strand expression
    (49) expression -> . expression stror expression
    (50) expression -> . expression lt expression
    (51) expression -> . expression gt expression
    (52) expression -> . expression lequal expression
    (53) expression -> . expression gequal expression
    (54) expression -> . expression isnotequal expression
    (55) expression -> . expression isequal expression
    (68) boolean -> . true
    (69) boolean -> . false
    (62) expression0 -> . num
    (63) expression0 -> . name
    (64) expression0 -> . boolean
    (67) name -> . identifier
    (65) num -> . integer

    input           shift and go to state 12
    minus           shift and go to state 26
    plus            shift and go to state 22
    invert          shift and go to state 8
    oparen          shift and go to state 10
    not             shift and go to state 17
    true            shift and go to state 19
    false           shift and go to state 4
    identifier      shift and go to state 28
    integer         shift and go to state 13

    name                           shift and go to state 27
    boolean                        shift and go to state 3
    num                            shift and go to state 7
    expression0                    shift and go to state 18
    expression                     shift and go to state 30

state 9

    (3) statement_list -> statement .
    (6) statement -> statement . newline

  ! shift/reduce conflict for newline resolved as shift
    print           reduce using rule 3 (statement_list -> statement .)
    identifier      reduce using rule 3 (statement_list -> statement .)
    input           reduce using rule 3 (statement_list -> statement .)
    minus           reduce using rule 3 (statement_list -> statement .)
    plus            reduce using rule 3 (statement_list -> statement .)
    invert          reduce using rule 3 (statement_list -> statement .)
    oparen          reduce using rule 3 (statement_list -> statement .)
    not             reduce using rule 3 (statement_list -> statement .)
    if              reduce using rule 3 (statement_list -> statement .)
    while           reduce using rule 3 (statement_list -> statement .)
    true            reduce using rule 3 (statement_list -> statement .)
    false           reduce using rule 3 (statement_list -> statement .)
    integer         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    dedent          reduce using rule 3 (statement_list -> statement .)
    newline         shift and go to state 31

  ! newline         [ reduce using rule 3 (statement_list -> statement .) ]


state 10

    (33) expression -> oparen . expression cparen
    (8) expression -> . input oparen parameters cparen
    (28) expression -> . boolean
    (29) expression -> . minus expression
    (30) expression -> . plus expression
    (31) expression -> . invert expression
    (32) expression -> . expression0
    (33) expression -> . oparen expression cparen
    (34) expression -> . not expression
    (35) expression -> . name
    (36) expression -> . expression plus expression
    (37) expression -> . expression minus expression
    (38) expression -> . expression times expression
    (39) expression -> . expression div expression
    (40) expression -> . expression power expression
    (41) expression -> . expression modulo expression
    (42) expression -> . expression lshift expression
    (43) expression -> . expression rshift expression
    (44) expression -> . expression floordiv expression
    (45) expression -> . expression and expression
    (46) expression -> . expression or expression
    (47) expression -> . expression xor expression
    (48) expression -> . expression strand expression
    (49) expression -> . expression stror expression
    (50) expression -> . expression lt expression
    (51) expression -> . expression gt expression
    (52) expression -> . expression lequal expression
    (53) expression -> . expression gequal expression
    (54) expression -> . expression isnotequal expression
    (55) expression -> . expression isequal expression
    (68) boolean -> . true
    (69) boolean -> . false
    (62) expression0 -> . num
    (63) expression0 -> . name
    (64) expression0 -> . boolean
    (67) name -> . identifier
    (65) num -> . integer

    input           shift and go to state 12
    minus           shift and go to state 26
    plus            shift and go to state 22
    invert          shift and go to state 8
    oparen          shift and go to state 10
    not             shift and go to state 17
    true            shift and go to state 19
    false           shift and go to state 4
    identifier      shift and go to state 28
    integer         shift and go to state 13

    name                           shift and go to state 27
    boolean                        shift and go to state 3
    num                            shift and go to state 7
    expression0                    shift and go to state 18
    expression                     shift and go to state 32

state 11

    (7) statement -> print . expression
    (8) expression -> . input oparen parameters cparen
    (28) expression -> . boolean
    (29) expression -> . minus expression
    (30) expression -> . plus expression
    (31) expression -> . invert expression
    (32) expression -> . expression0
    (33) expression -> . oparen expression cparen
    (34) expression -> . not expression
    (35) expression -> . name
    (36) expression -> . expression plus expression
    (37) expression -> . expression minus expression
    (38) expression -> . expression times expression
    (39) expression -> . expression div expression
    (40) expression -> . expression power expression
    (41) expression -> . expression modulo expression
    (42) expression -> . expression lshift expression
    (43) expression -> . expression rshift expression
    (44) expression -> . expression floordiv expression
    (45) expression -> . expression and expression
    (46) expression -> . expression or expression
    (47) expression -> . expression xor expression
    (48) expression -> . expression strand expression
    (49) expression -> . expression stror expression
    (50) expression -> . expression lt expression
    (51) expression -> . expression gt expression
    (52) expression -> . expression lequal expression
    (53) expression -> . expression gequal expression
    (54) expression -> . expression isnotequal expression
    (55) expression -> . expression isequal expression
    (68) boolean -> . true
    (69) boolean -> . false
    (62) expression0 -> . num
    (63) expression0 -> . name
    (64) expression0 -> . boolean
    (67) name -> . identifier
    (65) num -> . integer

    input           shift and go to state 12
    minus           shift and go to state 26
    plus            shift and go to state 22
    invert          shift and go to state 8
    oparen          shift and go to state 10
    not             shift and go to state 17
    true            shift and go to state 19
    false           shift and go to state 4
    identifier      shift and go to state 28
    integer         shift and go to state 13

    name                           shift and go to state 27
    boolean                        shift and go to state 3
    num                            shift and go to state 7
    expression0                    shift and go to state 18
    expression                     shift and go to state 33

state 12

    (8) expression -> input . oparen parameters cparen

    oparen          shift and go to state 34


state 13

    (65) num -> integer .

    plus            reduce using rule 65 (num -> integer .)
    minus           reduce using rule 65 (num -> integer .)
    times           reduce using rule 65 (num -> integer .)
    div             reduce using rule 65 (num -> integer .)
    power           reduce using rule 65 (num -> integer .)
    modulo          reduce using rule 65 (num -> integer .)
    lshift          reduce using rule 65 (num -> integer .)
    rshift          reduce using rule 65 (num -> integer .)
    floordiv        reduce using rule 65 (num -> integer .)
    and             reduce using rule 65 (num -> integer .)
    or              reduce using rule 65 (num -> integer .)
    xor             reduce using rule 65 (num -> integer .)
    strand          reduce using rule 65 (num -> integer .)
    stror           reduce using rule 65 (num -> integer .)
    lt              reduce using rule 65 (num -> integer .)
    gt              reduce using rule 65 (num -> integer .)
    lequal          reduce using rule 65 (num -> integer .)
    gequal          reduce using rule 65 (num -> integer .)
    isnotequal      reduce using rule 65 (num -> integer .)
    isequal         reduce using rule 65 (num -> integer .)
    newline         reduce using rule 65 (num -> integer .)
    print           reduce using rule 65 (num -> integer .)
    identifier      reduce using rule 65 (num -> integer .)
    input           reduce using rule 65 (num -> integer .)
    invert          reduce using rule 65 (num -> integer .)
    oparen          reduce using rule 65 (num -> integer .)
    not             reduce using rule 65 (num -> integer .)
    if              reduce using rule 65 (num -> integer .)
    while           reduce using rule 65 (num -> integer .)
    true            reduce using rule 65 (num -> integer .)
    false           reduce using rule 65 (num -> integer .)
    integer         reduce using rule 65 (num -> integer .)
    $end            reduce using rule 65 (num -> integer .)
    colon           reduce using rule 65 (num -> integer .)
    cparen          reduce using rule 65 (num -> integer .)
    dedent          reduce using rule 65 (num -> integer .)
    comma           reduce using rule 65 (num -> integer .)


state 14
